--- a/project.config.json
+++ b/project.config.json
@@ -50,7 +50,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx1ed0e80ea30153df",
+  "appid": "wx729453f234aa3b55",
   "projectname": "ZHKJXCX3.0",
   "debugOptions": {
     "hidedInDevtools": []
