--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,67 +1,59 @@
 {
-  "setting": {},
-  "condition": {
-    "plugin": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": [
-        {
-          "name": "本厂生产中",
-          "pathName": "pages/ourFactory/ourFactory",
-          "query": "type=1",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "外协进行中",
-          "pathName": "pages/ourFactory/ourFactory",
-          "query": "type=2",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "已完成",
-          "pathName": "pages/ourFactory/ourFactory",
-          "query": "type=3",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "登录界面",
-          "pathName": "pages/noLogin/noLogin",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "注册界面",
-          "pathName": "pages/signUp/signUp",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "管理页",
-          "pathName": "pages/manage/manage",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "外协验收",
-          "pathName": "pages/outsourcingAcceptance/outsourcingAcceptance",
-          "query": "",
-          "scene": null,
-          "launchMode": "default"
-        }
-      ]
-    }
-  }
+	"setting": {},
+	"condition": {
+		"miniprogram": {
+			"list": [
+				{
+					"name": "本厂生产中",
+					"pathName": "pages/ourFactory/ourFactory",
+					"query": "type=1",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "外协进行中",
+					"pathName": "pages/ourFactory/ourFactory",
+					"query": "type=2",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "已完成",
+					"pathName": "pages/ourFactory/ourFactory",
+					"query": "type=3",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "登录界面",
+					"pathName": "pages/noLogin/noLogin",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "注册界面",
+					"pathName": "pages/signUp/signUp",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "管理页",
+					"pathName": "pages/manage/manage",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "外协验收",
+					"pathName": "pages/outsourcingAcceptance/outsourcingAcceptance",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				}
+			]
+		}
+	},
+	"description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
 }
