--- a/app.json
+++ b/app.json
@@ -9,17 +9,16 @@
 		"pages/outsourcingAcceptance/outsourcingAcceptance"
 	],
 	"window": {
-		"backgroundTextStyle": "light",
-		"navigationBarTitleText": "织为云外协用工",
-		"navigationBarBackgroundColor": "#3BB1FF",
-		"navigationBarTextStyle": "white",
-		"backgroundColor": "#f3f3f3"
+		"navigationStyle":"custom"
 	},
 	"usingComponents": {
 		"list-card": "./components/listCard/listCard",
 		"order-card": "./components/orderCard/orderCard",
+		"nav-content":"./components/navContent/navContent",
 
 		"l-loadmore":"/miniprogram_npm/lin-ui/loadmore/index",
+		"l-capsule-bar":"/miniprogram_npm/lin-ui/capsule-bar/index",
+		"l-message":"/miniprogram_npm/lin-ui/message/index",
 
 		"van-button": "@vant/weapp/button/index",
 		"van-field": "@vant/weapp/field/index",
@@ -28,6 +27,7 @@
 		"van-notify": "@vant/weapp/notify/index",
 		"van-dialog": "@vant/weapp/dialog/index",
 		"van-popup": "@vant/weapp/popup/index",
+		"van-search": "@vant/weapp/search/index",
 		"van-tab": "@vant/weapp/tab/index",
 		"van-tabs": "@vant/weapp/tabs/index"
 	},
