--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
 	"setting": {
-		"compileHotReLoad": true
+		"compileHotReLoad": false
 	},
 	"condition": {
 		"miniprogram": {
@@ -58,6 +58,13 @@
 					"name": "生产验收（扫码进）",
 					"pathName": "pages/outsourcingAcceptance/outsourcingAcceptance",
 					"query": "isCodeIn=true",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "报价单列表",
+					"pathName": "pages/quotedPrice/quotedPrice",
+					"query": "",
 					"launchMode": "default",
 					"scene": null
 				}
