--- a/project.private.config.json
+++ b/project.private.config.json
@@ -67,6 +67,13 @@
 					"query": "",
 					"launchMode": "default",
 					"scene": null
+				},
+				{
+					"name": "创建报价单",
+					"pathName": "pages/quotedPriceCreate/quotedPriceCreate",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
 				}
 			]
 		}
