添加下拉框组件，以及组件的替换，报价单创建重写

--- a/app.json
+++ b/app.json
@@ -13,14 +13,14 @@
 		"pages/order/order",
 		"pages/sampleOrder/sampleOrder",
 		"pages/orderDetail/orderDetail",
-		"pages/sampleOrderDetail/sampleOrderDetail",
-		"pages/pickerTest/pickerTest"
+		"pages/sampleOrderDetail/sampleOrderDetail"
 	],
 	"window": {
 		"navigationStyle": "custom",
 		"navigationBarTextStyle": "black"
 	},
 	"usingComponents": {
+		"picker": "./components/picker/picker",
 		"list-card": "./components/listCard/listCard",
 		"order-card": "./components/orderCard/orderCard",
 		"nav-content": "./components/navContent/navContent",
