--- a/app.json
+++ b/app.json
@@ -78,6 +78,7 @@
 		"van-search": "@vant/weapp/search/index",
 		"van-tab": "@vant/weapp/tab/index",
 		"van-tabs": "@vant/weapp/tabs/index",
+		"van-toast": "@vant/weapp/toast/index",
 		"van-tree-select": "@vant/weapp/tree-select/index",
 		"van-uploader": "@vant/weapp/uploader/index"
 	},
