原料计划单详情 登录界面方法修改 封装公用方法

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -88,6 +88,13 @@
 					"query": "",
 					"launchMode": "default",
 					"scene": null
+				},
+				{
+					"name": "单据管理",
+					"pathName": "pages/billingManagement/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
 				}
 			]
 		}
