报价单筛选

--- a/app.json
+++ b/app.json
@@ -62,11 +62,6 @@
 		"order-log": "./components/orderLog/orderLog",
 		"l-album": "/miniprogram_npm/lin-ui/album/index",
 		"l-button": "/miniprogram_npm/lin-ui/button/index",
-		"l-capsule-bar": "/miniprogram_npm/lin-ui/capsule-bar/index",
-		"l-checkbox": "/miniprogram_npm/lin-ui/checkbox/index",
-		"l-checkbox-group": "/miniprogram_npm/lin-ui/checkbox-group/index",
-		"l-collapse": "/miniprogram_npm/lin-ui/collapse/index",
-		"l-collapse-item": "/miniprogram_npm/lin-ui/collapse-item/index",
 		"l-icon": "/miniprogram_npm/lin-ui/icon/index",
 		"l-input": "/miniprogram_npm/lin-ui/input/index",
 		"l-loadmore": "/miniprogram_npm/lin-ui/loadmore/index",
@@ -74,9 +69,9 @@
 		"l-message": "/miniprogram_npm/lin-ui/message/index",
 		"l-radio": "/miniprogram_npm/lin-ui/radio/index",
 		"l-radio-group": "/miniprogram_npm/lin-ui/radio-group/index",
-		"l-tabs": "/miniprogram_npm/lin-ui/tabs/index",
-		"l-tabpanel": "/miniprogram_npm/lin-ui/tabpanel/index",
 		"l-textarea": "/miniprogram_npm/lin-ui/textarea/index",
+		"mp-vtabs": "@miniprogram-component-plus/vtabs",
+		"mp-vtabs-content": "@miniprogram-component-plus/vtabs-content",
 		"t-image-viewer": "tdesign-miniprogram/image-viewer/image-viewer",
 		"t-icon": "tdesign-miniprogram/icon/icon",
 		"t-picker": "tdesign-miniprogram/picker/picker",
