--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@miniprogram-component-plus/vtabs": "^1.0.0",
+    "@miniprogram-component-plus/vtabs-content": "^1.0.0",
     "@vant/weapp": "^1.10.2",
     "lin-ui": "^0.9.8",
     "tdesign-miniprogram": "^0.10.0"
