按订单添加未完成 车间管理其它已完成

--- a/app.json
+++ b/app.json
@@ -50,7 +50,12 @@
 		"pages/editPassWord/editPassWord",
 		"pages/staffCreate/staffCreate",
 		"pages/ourFactoryDetail/ourFactoryDetail",
-		"pages/workshopManagement/workshopManagement"
+		"pages/workshopManagement/workshopManagement",
+		"pages/workshopManagementCreate/workshopManagementCreate",
+		"pages/workshopEditByPrice/workshopEditByPrice",
+		"pages/workshopEditByThing/workshopEditByThing",
+		"pages/workshopByStaff/workshopByStaff",
+		"pages/workshopByOrder/workshopByOrder"
 	],
 	"window": {
 		"navigationStyle": "custom",
