--- a/project.private.config.json
+++ b/project.private.config.json
@@ -131,5 +131,6 @@
 		}
 	},
 	"description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-	"projectname": "ZHKJXCX3.0"
+	"projectname": "ZHKJXCX3.0",
+	"libVersion": "2.21.4"
 }
